# thunderdrone_rover

./: README.md
Jetson/: README  README.md  buildJetsonTX2Kernel.tar
UltrasonicFront/: UltrasonicFront.ino
c++/: .old.pgm.swp  a.out  color_counter.cpp  convert.hpp  main.cpp  new.pgm
controller/: autodrive.c  drive
frontend/: index.html  overlay.html  overlay.styl  test.js
frontend/css/: style.css
frontend/html/: index.html
frontend/javascript/: javascript.js
frontend/public/: index.html  map.html  mapgrap.sh  overlay.html
landingPage/public/: index.html  map.html  overlay.html
ppm/: index.html
ros/catkin_ws/: #map.pgm#  a.out  convert.hpp  frames.gv  instructions  instructions~  location.sh  main.cpp  main.cpp~  map.pgm  new.pgm  newmap.pgm  newmap.yaml  old.pgm  old.yaml  page.html  (+6 more)
ros/catkin_ws/src/rplidar_ros_gaps/: CHANGELOG.rst  CMakeLists.txt  README.md  rplidar_pub.x86
ros/catkin_ws/src/rplidar_ros_gaps/gaps/include/: RPLidar.h  RPLidarProxy.h  RPLidarProxyStuff.h  Udp.h  XCommandLine.h  XCommon.h  XError.h  XException.h  XMutex.h  XSocket.h  XStrSafe.h  XThread.h  XType.h
ros/catkin_ws/src/rplidar_ros_gaps/gaps/src/: RPLidar.cpp  RPLidarProxy.cpp  Udp.cpp  XCommandLine.cpp  XMutex.cpp  XSocket.cpp  XThread.cpp
ros/catkin_ws/src/rplidar_ros_gaps/launch/: #hectormapping.launch#  hectormapping.launch  hectormapping.launch~  rplidar_gaps.launch  test_rplidar_gaps.launch  view_rplidar_gaps.launch  view_slam.launch
ros/catkin_ws/src/rplidar_ros_gaps/scripts/: create_udev_rules.sh
ros/catkin_ws/src/rplidar_ros_gaps/src/: node.cpp
(+64 files in other folders)
